Agregando las casillas restantes

--- a/index.html
+++ b/index.html
@@ -31,6 +31,24 @@
                 <td><input type="number" name="" id="d_planeta_2" class="distancia_planetas planeta2"></td>
                 <td><input type="number" name="" id="t_planeta_2" class="tamaño_planetas planeta2"></td>
             </tr>
+            <tr>
+                <td><input type="number" name="" id="n_planeta_3" class="numeracion_planetas planeta3"></td>
+                <td><input type="text" name="" id="np_planeta_3" class="nombre_planetas planeta3"></td>
+                <td><input type="number" name="" id="d_planeta_3" class="distancia_planetas planeta3"></td>
+                <td><input type="number" name="" id="t_planeta_3" class="tamaño_planetas planeta3"></td>
+            </tr>
+            <tr>
+                <td><input type="number" name="" id="n_planeta_4" class="numeracion_planetas planeta4"></td>
+                <td><input type="text" name="" id="np_planeta_4" class="nombre_planetas planeta4"></td>
+                <td><input type="number" name="" id="d_planeta_4" class="distancia_planetas planeta4"></td>
+                <td><input type="number" name="" id="t_planeta_4" class="tamaño_planetas planeta4"></td>
+            </tr>
+            <tr>
+                <td><input type="number" name="" id="n_planeta_5" class="numeracion_planetas planeta5"></td>
+                <td><input type="text" name="" id="np_planeta_5" class="nombre_planetas planeta5"></td>
+                <td><input type="number" name="" id="d_planeta_5" class="distancia_planetas planeta5"></td>
+                <td><input type="number" name="" id="t_planeta_5" class="tamaño_planetas planeta5"></td>
+            </tr>
         </tbody>    
     </table>
     <div class="contaioner">
