--- a/index.html
+++ b/index.html
@@ -19,26 +19,26 @@
             </tr>
         </thead>
         <tbody>
-            <tr>
-                <td><input type="number" name="" id="n_planeta_1" class="numeracion_planetas planeta1"></td>
-                <td><input type="text" name="" id="np_planeta_1" class="nombre_planetas planeta1"></td>
-                <td><input type="number" name="" id="d_planeta_1" class="distancia_planetas planeta1"></td>
-                <td><input type="number" name="" id="t_planeta_1" class="tamaño_planetas planeta1"></td>
+            <tr> 
+                <td>1</td>
+                <td>Tierra</td>
+                <td>1</td>
+                <td>1</td>
             </tr>
-            <tr>
-                <td><input type="number" name="" id="n_planeta_2" class="numeracion_planetas planeta2"></td>
-                <td><input type="text" name="" id="np_planeta_2" class="nombre_planetas planeta2"></td>
-                <td><input type="number" name="" id="d_planeta_2" class="distancia_planetas planeta2"></td>
-                <td><input type="number" name="" id="t_planeta_2" class="tamaño_planetas planeta2"></td>
+            <tr> 
+                <td>1</td>
+                <td>Tierra</td>
+                <td>1</td>
+                <td>1</td>
             </tr>
-        </tbody>    
+            <tr> 
+                <td>1</td>
+                <td>Tierra</td>
+                <td>1</td>
+                <cleatd>1</td>
+            </tr>
+        </tbody>
     </table>
-    <div class="contaioner">
-        <button id="btn_enviar_evaluacion" class="item">Enviar</button>
-        <button id="btn_ordenar_valores" class="item">Ordenar Valores</button>
-        <button id="btn_filtrar_distancia" class="item">Filtrar</button>
-        <button id="btn_enviar_evaluacion" class="item">Buscar</button>
-    </div>
     <script src="./script/script.js"></script>
 </body>
 </html>
