Agregando nueva info

--- a/index.html
+++ b/index.html
@@ -49,6 +49,24 @@
                 <td><input type="number" name="" id="d_planeta_5" class="distancia_planetas planeta5"></td>
                 <td><input type="number" name="" id="t_planeta_5" class="tamaño_planetas planeta5"></td>
             </tr>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates deserunt quaerat eum laboriosam! Quam dolorem obcaecati harum similique sunt sed, sint, maxime sapiente, atque aperiam itaque in. Nam, animi nihil!
+            Doloribus repellat perferendis quisquam dicta expedita nostrum consequatur ex dolorem at maxime excepturi modi vel voluptatibus officiis commodi aliquid molestias assumenda earum hic, quidem ea quae sed beatae. Reprehenderit, facere?
+            Expedita, atque, est corporis rerum ut assumenda vel totam quasi debitis perferendis, reiciendis doloribus. Voluptate provident fuga explicabo ea? Odit quis esse, cum velit unde consequatur maxime iusto error sunt!
+            At quibusdam, animi quod sit voluptates non cum eos modi deserunt nisi sint itaque nobis libero? Sed amet expedita officiis nihil ea accusamus saepe accusantium molestias voluptate, vero nostrum debitis.
+            Quasi cumque earum, dolorum expedita explicabo eveniet cum nam iusto exercitationem alias eos odit deleniti dolor ex fugit? Odit nulla unde quibusdam iure aperiam id sequi minus. Perferendis, amet tempora?
+            Debitis, cum doloremque ratione pariatur amet recusandae, quod delectus consequatur eaque repudiandae omnis architecto possimus magnam tempora. Sit, velit dolores ad voluptatum nostrum molestiae suscipit sint tempore nisi possimus. Nobis?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates deserunt quaerat eum laboriosam! Quam dolorem obcaecati harum similique sunt sed, sint, maxime sapiente, atque aperiam itaque in. Nam, animi nihil!
+            Doloribus repellat perferendis quisquam dicta expedita nostrum consequatur ex dolorem at maxime excepturi modi vel voluptatibus officiis commodi aliquid molestias assumenda earum hic, quidem ea quae sed beatae. Reprehenderit, facere?
+            Expedita, atque, est corporis rerum ut assumenda vel totam quasi debitis perferendis, reiciendis doloribus. Voluptate provident fuga explicabo ea? Odit quis esse, cum velit unde consequatur maxime iusto error sunt!
+            At quibusdam, animi quod sit voluptates non cum eos modi deserunt nisi sint itaque nobis libero? Sed amet expedita officiis nihil ea accusamus saepe accusantium molestias voluptate, vero nostrum debitis.
+            Quasi cumque earum, dolorum expedita explicabo eveniet cum nam iusto exercitationem alias eos odit deleniti dolor ex fugit? Odit nulla unde quibusdam iure aperiam id sequi minus. Perferendis, amet tempora?
+            Debitis, cum doloremque ratione pariatur amet recusandae, quod delectus consequatur eaque repudiandae omnis architecto possimus magnam tempora. Sit, velit dolores ad voluptatum nostrum molestiae suscipit sint tempore nisi possimus. Nobis?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates deserunt quaerat eum laboriosam! Quam dolorem obcaecati harum similique sunt sed, sint, maxime sapiente, atque aperiam itaque in. Nam, animi nihil!
+            Doloribus repellat perferendis quisquam dicta expedita nostrum consequatur ex dolorem at maxime excepturi modi vel voluptatibus officiis commodi aliquid molestias assumenda earum hic, quidem ea quae sed beatae. Reprehenderit, facere?
+            Expedita, atque, est corporis rerum ut assumenda vel totam quasi debitis perferendis, reiciendis doloribus. Voluptate provident fuga explicabo ea? Odit quis esse, cum velit unde consequatur maxime iusto error sunt!
+            At quibusdam, animi quod sit voluptates non cum eos modi deserunt nisi sint itaque nobis libero? Sed amet expedita officiis nihil ea accusamus saepe accusantium molestias voluptate, vero nostrum debitis.
+            Quasi cumque earum, dolorum expedita explicabo eveniet cum nam iusto exercitationem alias eos odit deleniti dolor ex fugit? Odit nulla unde quibusdam iure aperiam id sequi minus. Perferendis, amet tempora?
+            Debitis, cum doloremque ratione pariatur amet recusandae, quod delectus consequatur eaque repudiandae omnis architecto possimus magnam tempora. Sit, velit dolores ad voluptatum nostrum molestiae suscipit sint tempore nisi possimus. Nobis?</p>
         </tbody>    
     </table>
     <div class="contaioner">
