--- a/index.html
+++ b/index.html
@@ -50,6 +50,17 @@
                 <td><input type="number" name="" id="t_planeta_5" class="tamaño_planetas planeta5"></td>
             </tr>
         </tbody>    
+        <section>
+            <h1>why we are like these?</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem magni dolor, totam sed ab aut, distinctio quae consequatur, incidunt voluptatem quam fuga perspiciatis odio. Quos omnis adipisci qui eaque dignissimos.
+            Ipsum molestiae culpa voluptate voluptates! Blanditiis earum quae dignissimos, exercitationem quia tempora voluptatibus voluptates eveniet saepe aliquam quod dolore quisquam expedita! Voluptatem suscipit ex provident incidunt quis! Hic, nam a.
+            Deleniti natus ullam nulla, voluptatibus, pariatur commodi molestiae quia culpa molestias, quaerat repellat. Pariatur iusto excepturi sunt vero est numquam eveniet odit dolorum cupiditate veniam enim quae culpa, perspiciatis tempora!
+            Quo esse, placeat omnis sapiente, excepturi cupiditate fugiat reiciendis sint, hic est delectus distinctio reprehenderit voluptatem! Accusamus harum excepturi magnam dolor obcaecati velit veniam a. Distinctio laudantium suscipit repellendus delectus?</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem magni dolor, totam sed ab aut, distinctio quae consequatur, incidunt voluptatem quam fuga perspiciatis odio. Quos omnis adipisci qui eaque dignissimos.
+            Ipsum molestiae culpa voluptate voluptates! Blanditiis earum quae dignissimos, exercitationem quia tempora voluptatibus voluptates eveniet saepe aliquam quod dolore quisquam expedita! Voluptatem suscipit ex provident incidunt quis! Hic, nam a.
+            Deleniti natus ullam nulla, voluptatibus, pariatur commodi molestiae quia culpa molestias, quaerat repellat. Pariatur iusto excepturi sunt vero est numquam eveniet odit dolorum cupiditate veniam enim quae culpa, perspiciatis tempora!
+            Quo esse, placeat omnis sapiente, excepturi cupiditate fugiat reiciendis sint, hic est delectus distinctio reprehenderit voluptatem! Accusamus harum excepturi magnam dolor obcaecati velit veniam a. Distinctio laudantium suscipit repellendus delectus?</p>
+        </section>
     </table>
     <div class="contaioner">
         <button id="btn_enviar_evaluacion" class="item">Enviar</button>
